# raytracer2

./: .gitignore  CMakeLists.txt  README.md
src/: Camera.cpp  Camera.hpp  MathLib (modified).hpp  MathLib.hpp  Raytracer.cpp  Raytracer.hpp  Scene.cpp  Scene.hpp  main.cpp
src/lights/: PointLight.cpp  PointLight.hpp
src/materials/: CheckeredMaterial.cpp  CheckeredMaterial.hpp  Material.cpp  Material.hpp
src/objects/: BoundedPlane.cpp  BoundedPlane.hpp  InfinitePlane.cpp  InfinitePlane.hpp  Object.cpp  Object.hpp  Sphere.cpp  Sphere.hpp  Triangle.cpp  Triangle.hpp
